--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <img src="logo.png" width="150" height="200" alt="маруся">
             </td>
             <td>
-                <h1> Василий Незнайкин </h1>
+                <h1> Василий Пупкин </h1>
                 <p><em> Я начинающий <strong> программист</strong></em></p>
                 <p> Я нахожусь на начальной стадии изучения программирования </p>                  
             </td>
