добавила ссылку на пред места работы

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <hr>
 
 <h2> мои предыдущие места работы</h2>
- <a href="mesta.html"> посмотреть список</a>
+ <a href="mesta.html" target="_blank" > посмотреть список</a>
 
  <hr>
  
