--- a/index.html
+++ b/index.html
@@ -59,28 +59,38 @@
                     <a href="https://www.tinkoff.ru/"> Тинькофф-банк</a>
                 </li>
             </ul>
+        </div>
+
+        <div class="contact">
+            <h2> Связаться со мной</h2>
+            <form action="/"> 
+                <div class="row">
+                    <div class="form-group">
+                        <label for="name"> Ваше имя </label>
+                        <input type="text" id="name" placeholder="введите имя">
+                    </div>
+                    <div class="form-group">
+                        <label for="номер"> Ваш номер </label>
+                        <input type="password" id="номер" placeholder="введите номер">   
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="text"> ваше сообщение </label>
+                    <textarea id="text" rows="2" cols="15">
+                    </textarea>
                 </div>
 
-        <h2> Связаться со мной</h2>
-        <form action="/"> 
-            <label for="name"> Ваше имя </label>
-            <input type="text" id="name" placeholder="введите имя">
-
-            <label for="номер"> Ваш номер </label>
-            <input type="password" id="номер" placeholder="введите номер">   
-            <br>
-            <label for="text"> ваше сообщение </label>
-            <textarea name="" id="text"></textarea>
-            <input type="submit" value="связаться">
-        </form>
-
-
-        <div class="box-model">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+                <input type="submit" value="связаться">
+                
+            </form>
         </div>
+
+        <!-- <div class="box-model">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div> -->
 
     </div> 
 
